<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#36000000"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/pop_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/bg_parentLayout"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:text="请选择报销类型"
            android:textSize="12sp" />

        <View style="@style/horizontalLine" />

        <TextView
            android:id="@+id/tvClaimTypeEqp0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/claim_type_eqp_0"
            android:textSize="15sp" />

        <View style="@style/horizontalLine" />

        <TextView
            android:id="@+id/tvClaimTypeEqp1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/claim_type_eqp_1"
            android:textSize="15sp" />

        <View style="@style/horizontalLine" />

        <TextView
            android:id="@+id/tvClaimTypeEqp2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/claim_type_eqp_2"
            android:textSize="15sp" />

        <View style="@style/horizontalLine" />

        <View
            style="@style/horizontalLine"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/tvClaimTypeEqpCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/pop_cancel"
            android:textSize="15sp" />
    </LinearLayout>

</RelativeLayout>
