<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff"
    tools:context=".ui.other.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="90dp"
                android:contentDescription="@string/desImageView"
                android:src="@mipmap/login_logo" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="50dp"
                android:hint="@string/login_email"
                android:inputType="textEmailAddress"
                android:background="@drawable/bg_circle_square_size4_def"
                android:singleLine="true"
                android:paddingStart="10dp"
                android:gravity="center_vertical"
                android:paddingEnd="10dp"
                android:textSize="17sp" />

            <Button
                android:id="@+id/btnLogin"
                style="?borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_margin="15dp"
                android:background="@drawable/sel_circle_square_green_to_gray"
                android:textColor="@android:color/white"
                android:textSize="17sp"
                android:text="@string/login_tips" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>