<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_parentLayout"
    android:orientation="vertical">

    <include layout="@layout/common_title_bar" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@android:color/white">

        <View
            android:id="@+id/viewLine0"
            style="@style/horizontalLine"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:id="@+id/rlProName"
            style="@style/normalItem"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            app:layout_constraintTop_toBottomOf="@+id/viewLine0">

            <TextView
                android:id="@+id/tvProName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/clock_out_proName"
                android:textColor="@android:color/black"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/etProName"
                style="@style/normalEditView"
                android:layout_toEndOf="@+id/tvProName"
                android:gravity="end|center"
                android:hint="@string/clock_out_proName_tips"
                android:textSize="17sp" />
        </RelativeLayout>

        <View
            android:id="@+id/viewLine1"
            style="@style/horizontalLine"
            android:layout_marginStart="15dp"
            app:layout_constraintTop_toBottomOf="@+id/rlProName" />

        <RelativeLayout
            android:id="@+id/rlProTime"
            style="@style/normalItem"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            app:layout_constraintTop_toBottomOf="@+id/viewLine1">

            <TextView
                android:id="@+id/tvProTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/clock_out_proTime"
                android:textColor="@android:color/black"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/etProTime"
                style="@style/normalEditView"
                android:layout_toEndOf="@+id/tvProTime"
                android:gravity="end|center"
                android:hint="@string/clock_out_proTime"
                android:textSize="17sp" />
        </RelativeLayout>

        <View
            android:id="@+id/viewLine2"
            style="@style/horizontalLine"
            app:layout_constraintTop_toBottomOf="@+id/rlProTime" />

    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/btnSubmit"
        style="?borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_margin="15dp"
        android:background="@drawable/sel_circle_square_green_to_gray"
        android:text="@string/clock_out_submit"
        android:textColor="@android:color/white"
        android:textSize="17sp" />

</LinearLayout>